# AoC2022

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/Day 1/: CMakeLists.txt  harder.cpp  main.cpp
src/Day 2/: CMakeLists.txt  harder.cpp  main.cpp
